--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -3,22 +3,12 @@
 
 {% block main %}
 
-<form method="POST">
+<form method="post">
     {% csrf_token %}
 
     {{ form|bootstrap }}
 
     <button type="submit">Salvar</button>
 </form>
-
-<br>
-<a href="{% url 'create_documento' object.id %}" class="btn btn-success">
-    Adicionar Documento
-</a>
-
-<br>
-{% for documento in object.documento_set.all %}
-    <a href="{{ documento.arquivo.url }}">{{ documento }}</a>  <br>
-{% endfor %}
 
 {% endblock %}
