--- a/apps/funcionarios/templates/funcionarios/funcionario_confirm_delete.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_confirm_delete.html
@@ -4,7 +4,7 @@
 
 <form method="post">
     {% csrf_token %}
-    <h1>Você está certo que quer deletar {{ obj }}?</h1>
+    <h1>Você está certo que quer deletar {{ object }}?</h1>
     {{ form }}
 
     <button type="submit">Confirmar</button>
