--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_confirm_delete.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main %}
-
+<h2>Removendo Registro de Hora Extra:</h2>
 <form method="post">
     {% csrf_token %}
     <h1>Você está certo que quer deletar {{ object }}?</h1>
