--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -12,13 +12,27 @@
 </form>
 
 <br>
+<h2>Documentos</h2>
+<ul>
+    {% for documento in object.documento_set.all %}
+        <li><a href="{{ documento.arquivo.url }}">{{ documento }}</a></li>
+    {% endfor %}
+</ul>
 <a href="{% url 'create_documento' object.id %}" class="btn btn-success">
     Adicionar Documento
 </a>
 
 <br>
-{% for documento in object.documento_set.all %}
-    <a href="{{ documento.arquivo.url }}">{{ documento }}</a>  <br>
-{% endfor %}
+<h2>Banco de horas</h2>
+<ul>
+    {% for registro_hora in object.registrohoraextra_set.all %}
+        <li>
+            {{ registro_hora.motivo }} | {{ registro_hora.horas }}
+        </li>
+    {% endfor %}
+</ul>
+<a href="{% url 'create_documento' object.id %}" class="btn btn-success">
+    Adicionar Documento
+</a>
 
 {% endblock %}
