--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load bootstrap %}
 
 {% block main %}
@@ -8,7 +9,7 @@
 
     {{ form|bootstrap }}
 
-    <button type="submit" class="btn btn-info">Salvar</button>
+    <button type="submit" class="btn btn-primary">Salvar</button>
 
     {% if object %}
         <a href="{% url 'delete_hora_extra' object.id %}" class="btn btn-danger">
@@ -17,5 +18,15 @@
     {% endif %}
 </form>
 
+    <button onclick="utilizouHoraExtra({{ object.id }})" class="btn btn-info">
+        Marcar como utilizado
+    </button>
+
 <br>
+<p id="mensagem"></p>
+{% endblock %}
+
+{% block static %}
+    <script src="{% static 'js/jquery.js' %}"></script>
+    <script src="{% static 'js/funcoes-ajax.js' %}"></script>
 {% endblock %}
