Criando o campo e marcando hora como utilizada usando Ajax

--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
@@ -16,11 +16,14 @@
             Deletar
         </a>
     {% endif %}
-</form>
 
-    <button onclick="utilizouHoraExtra({{ object.id }})" class="btn btn-info">
+    <button onclick="utilizouHoraExtra({{ object.id }})"
+            class="btn btn-info" type="button">
         Marcar como utilizado
     </button>
+</form>
+
+<h2 id="horas_atualizadas">{{ object.funcionario.total_horas_extra }}</h2>
 
 <br>
 <p id="mensagem"></p>
