Finalizando funcionalidade com Ajax

--- a/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
+++ b/apps/registro_hora_extra/templates/registro_hora_extra/registrohoraextra_form.html
@@ -19,7 +19,7 @@
 
     <button onclick="utilizouHoraExtra({{ object.id }})"
             class="btn btn-info" type="button">
-        Marcar como utilizado
+        Marcar como utilizada
     </button>
 </form>
 
