--- a/apps/funcionarios/templates/funcionarios/funcionario_list.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_list.html
@@ -14,4 +14,7 @@
     {% endfor %}
 
     <a href="{% url 'create_funcionario' %}" class="btn btn-info">Novo</a>
+    <a href="{% url 'relatorio_funcionarios' %}" class="btn btn-secondary">
+        PDF
+    </a>
 {% endblock %}
