Gerando relatórios com o xhtml2pdf

--- a/apps/funcionarios/templates/funcionarios/funcionario_list.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_list.html
@@ -17,4 +17,10 @@
     <a href="{% url 'relatorio_funcionarios' %}" class="btn btn-secondary">
         PDF
     </a>
+    <a href="{% url 'relatorio_funcionarios_html' %}" class="btn btn-secondary">
+        PDF_HTML
+    </a>
+    <a href="{% url 'relatorio_funcionarios_html_debug' %}" class="btn btn-danger">
+        PDF_HTML
+    </a>
 {% endblock %}
