--- a/apps/funcionarios/templates/funcionarios/relatorio.html
+++ b/apps/funcionarios/templates/funcionarios/relatorio.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 
+{% block staticcss %}
+    <style>
+        .teste { color: red }
+    </style>
+{% endblock %}
 
 {% block main %}
-    <h1>Meu Relatorio</h1>
+    <h1 class="teste">Meu Relatorio</h1>
     <h2>{{ sales }}</h2>
 {% endblock %}
